<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_data"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_wood_type"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_wood_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="dropdown_menu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spinner_wood_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:paddingStart="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_moisture" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_moisture"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="dropdown_menu"
        app:hintEnabled="true">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spinner_humidity_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:paddingStart="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_result"
        android:textSize="20sp"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/green"
        android:textStyle="bold"/>
</LinearLayout>