<resources>
    <string name="app_name">VolumetricTable</string>
    <string name="title_volumetric_table">Кубатурник</string>
    <string name="title_density">Плотность</string>
    <string name="title_gost">Гост</string>

    <string name="title_data">Введите данные</string>
    <string name="title_result">Результат</string>

</resources>